--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="30dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@color/colorPrimaryDark"/>
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
