--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,9 @@
             android:background="#00FFFFFF"
             android:padding="13dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/menu" />
+            android:src="@drawable/menu"
+            android:onClick="showPopup"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/filterBoxContainer"
