--- a/app/src/main/res/layout/about_activity.xml
+++ b/app/src/main/res/layout/about_activity.xml
@@ -64,7 +64,25 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="lorem ipsum"
+            android:text="Tato aplikace byla vytvořena Matějem Bížou s cílem vytořit Android verzi webové aplikace Jiu-Jitsu slovník (dostupné na matjebiza.cz/slovnik)."
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            >
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cílem aplikace je pomoci při opakování a procvičování slovíček a technik. Zároveň má za cíl vysvětlit slovíčka techniky tak, aby uživatel porozuměl jejich významu a nemusel si techniky složitě zapamatovávat a 'drtit' se je."
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            >
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cílem aplikace není slovíčka a techniky naučit, protože to je pomocí textu prakticky nemožné a ani nedokáže poskytnout zpětnou vazbu. Proto vždy, když něčemu nerozumíte nebo vám nějaká technika nejde, to doporučujeme konzultovat se svým mistrem."
             android:textColor="#000000"
             android:textSize="15sp"
             android:layout_marginTop="15dp"
